--- a/pi1/language/language.json
+++ b/pi1/language/language.json
@@ -1,7 +1,7 @@
 {
   "config": {
     "default": "dk",
-    "version": "0.008.003.001 beta"
+    "version": "0.010.003.001 proxy beta"
   },
   "language": {
     "en": {
