[BUG] fix: location shown only after location list in language.json

--- a/pi1/language/language.json
+++ b/pi1/language/language.json
@@ -296,7 +296,7 @@
 	  "category_all" :	 		"alle resultater",
 	  
 	  "label_cat_kks":			"den kongelige kobberstiksamling",
-	  "label_cat_kms":			"den kongelige maleriesamling",
+	  "label_cat_kms":			"den kongelige malerisamling",
 	  "label_cat_kas":			"den kongelige afst&oslash;bningssamling",
 	  "label_cat_dep":			"depositum",
 	  "label_cat_default":		"samlinger",	 
