[!!!][DRIFT] changes in typo3 template configuration: -StateManager unqiueURL, +ViewManager EventsManager ModelManager

--- a/pi1/language/language.json
+++ b/pi1/language/language.json
@@ -1,7 +1,7 @@
 {
   "config": {
     "default": "dk",
-    "version": "0.013.000.001 proxy beta"
+    "version": "1.000.000.000 mvc proxy"
   },
   "language": {
     "en": {
