--- a/pi1/language/language.json
+++ b/pi1/language/language.json
@@ -10,8 +10,9 @@
 
       "general_tooltip":		"%3Cdiv%3E%0A%20%20%20%20%3Ca%20href%3D%27%23%27%20class%3D%27tooltip__close%27%3E%3C%2Fa%3E%20%0A%20%20%20%20%3Cbr%3E%20%20%0A%20%20%20%20%3Cp%3E%0A%20%20%20%20%20%20%20%20%3Cb%3EWe%20have%20recently%20upgraded%20our%20search%20functionality.%20Did%20you%20find%20what%20you%20needed%3F%20We%20welcome%20feedback.%3C%2Fb%3E%20%0A%20%20%20%20%3C%2Fp%3E%0A%20%20%20%20%3Cbr%3E%0A%20%20%20%20%3Cp%3E%0A%20%20%20%20%20%20%20%20We%E2%80%99re%20continually%20working%20to%20improve%20our%20search%20functionality%20and%20we%E2%80%99d%20appreciate%20any%20comments%20as%20well%20as%20your%20new%20ideas%20so%20we%20can%20make%20it%20even%20better.%0A%20%20%20%20%20%20%20%20%3Cbr%3E%0A%20%20%20%20%20%20%20%20%3Cbr%3E%0A%20%20%20%20%20%20%20%20Send%20a%20mail%20to%20our%20Digital%20Project%20Manager%20Malene%20R%C3%B8rdam%20%3Ca%20href%3D%22javascript%3AlinkTo_UnCryptMailto(%27jxfiql7jxibkb%2BolboaxjXpjh%2Bah%27)%3B%22%3E(malene.roerdam%3Cspan%20class%3D%22hiddendata%22%3E_%3C%2Fspan%3E%40%3Cspan%20class%3D%22hiddendata%22%3E_%3C%2Fspan%3Esmk.dk)%3C%2Fa%3E%20%20%0A%20%20%20%20%20%20%20%20%3Cbr%3E%0A%20%20%20%20%20%20%20%20%3Cbr%3E%0A%20%20%20%20%20%20%20%20Thanks%20for%20the%20help!%0A%20%20%20%20%3C%2Fp%3E%0A%3C%2Fdiv%3E",
       
-      "copyright_def":			"CC0 - Public Domain",			
-
+      "copyright_def":			"This image is in the <a class='pd' onClick%3D%22window.open(%27http%3A%2F%2Fwww.smk.dk%2Fen%2Fcopyright%2Fcreative-commons%2F%27%2C%20%27_blank%27)%22%0A%0A>Public Domain</a> so you may freely use it for any purpose.",	      	
+	  "copyright_def_list":		"CC0 - Public Domain",
+	  	
 	  "tagCloud_artist": 		"artist",
 	  "tagCloud_period": 		"period",
 	  "tagCloud_country": 		"nationality",
@@ -273,7 +274,8 @@
       
       "general_tooltip":		"%3Cdiv%3E%0A%20%20%20%20%3Ca%20href%3D%27%23%27%20class%3D%27tooltip__close%27%3E%3C%2Fa%3E%20%0A%20%20%20%20%3Cbr%3E%20%20%0A%20%20%20%20%3Cp%3E%0A%20%20%20%20%20%20%20%20%3Cb%3EVores%20website%20har%20f%C3%A5et%20en%20ny%20og%20bedre%20s%C3%B8gefunktion.%20Finder%20du%2C%20hvad%20du%20skal%20bruge%3F%20Vi%20vil%20gerne%20have%20din%20feedback.%3C%2Fb%3E%20%0A%20%20%20%20%3C%2Fp%3E%0A%20%20%20%20%3Cbr%3E%0A%20%20%20%20%3Cp%3E%0A%20%20%20%20%20%20%20%20Vi%20arbejder%20l%C3%B8bende%20p%C3%A5%20at%20forbedre%20s%C3%B8gefunktionen.%20Derfor%20har%20vi%20brug%20for%20dine%20input%20til%20og%20gode%20ideer%20til%20hvordan%20vi%20kan%20g%C3%B8re%20den%20endnu%20bedre.%0A%20%20%20%20%20%20%20%20%3Cbr%3E%0A%20%20%20%20%20%20%20%20%3Cbr%3E%0A%20%20%20%20%20%20%20%20Send%20en%20mail%20til%20digital%20projektleder%20Malene%20R%C3%B8rdam%20%3Ca%20href%3D%22javascript%3AlinkTo_UnCryptMailto(%27jxfiql7jxibkb%2BolboaxjXpjh%2Bah%27)%3B%22%3E(malene.roerdam%3Cspan%20class%3D%22hiddendata%22%3E_%3C%2Fspan%3E%40%3Cspan%20class%3D%22hiddendata%22%3E_%3C%2Fspan%3Esmk.dk)%3C%2Fa%3E%20%20%0A%20%20%20%20%20%20%20%20%3Cbr%3E%0A%20%20%20%20%20%20%20%20%3Cbr%3E%0A%20%20%20%20%20%20%20%20P%C3%A5%20forh%C3%A5nd%20tak%20for%20hj%C3%A6lpen.%0A%20%20%20%20%3C%2Fp%3E%0A%3C%2Fdiv%3E",
     
-      "copyright_def":			"CC0 - Public Domain",
+      "copyright_def":			"Dette billede er i <a class='pd' onClick%3D%22window.open(%27http%3A%2F%2Fwww.smk.dk%2Fpublic-domain%27%2C%20%27_blank%27)%22>Public Domain</a>, og du kan derfor frit benytte det til alle form&aring;l.",
+      "copyright_def_list":		"CC0 - Public Domain",
       
       "tagCloud_artist": 		"kunstner",
       "tagCloud_period": 		"periode",
